deploy/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv19pc
spec:
  selector:
    matchLabels:
      app: cv19pc
  template:
    metadata:
      labels:
        app: cv19pc
    spec:
      containers:
      - name: cv19pc
        image: rg.nl-ams.scw.cloud/njkonl/covid19-per-capita:0.1.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "1000m"
          requests:
            memory: "80Mi"
            cpu: "10m"
        ports:
        - name: www
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /assets/favicon.ico
            port: www
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1  
kind: Service
metadata:
  name: cv19pc
spec:
  selector:
    app: cv19pc
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cv19pc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: covid19-per-capita.njk.onl
    http:
      paths:
      - path: /
        backend:
          serviceName: cv19pc
          servicePort: 80
  tls:
  - hosts:
    - covid19-per-capita.njk.onl
    secretName: cv19pc-cert
